swagger and validation
Update swagger for transactions and validation for transactions
